<resources>
    <string name="app_name">Doctive</string>
    <string name="splash_wc_txt">Welcome to</string>
    <string name="splash_fitness_txt">Fitness.</string>
    <string name="second_doctive_txt">Doctive.</string>
    <string name="survey">Survey Done!</string>
    <string name="second_wc_txt">Welcome to the family</string>
    <string name="second_desc_txt">We need some information to make a perfect workout experience for you.</string>
    <string name="second_start_btn_txt">start</string>
    <string name="second_exist_acc_txt">Already have an account</string>

    <string name="next">Next</string>
    <string name="skip">skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_txt">A jumping jack, also called side-straddle hop in the US
        military, is a physical jumping exercise performed by jumping
        to a position with the legs spread wide and the hands going overhead, sometimes android:textSize=</string>

</resources>
