<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pal.doctive.activities.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/workout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@drawable/whole_screen_gradient">

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/doctive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200sdp"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center_horizontal"
        android:text="@string/second_doctive_txt"
        android:textColor="@color/txt_color_white"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/sub_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doctive"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center_horizontal"
        android:text="@string/second_wc_txt"
        android:textColor="@color/txt_color_white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/text_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_head"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/quicksandlightitalic"
        android:gravity="center_horizontal"
        android:padding="@dimen/_8sdp"
        android:text="@string/second_desc_txt"
        android:textColor="@color/txt_color_white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_desc"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_130sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/second_start_btn_txt"
        android:textColor="@color/txt_color_white"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/exist_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_button"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/quicksanditalic"
        android:gravity="center_horizontal"
        android:text="@string/second_exist_acc_txt"
        android:textColor="@color/txt_color_white"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>
